# QSFML-Template

./: .gitignore  CMakeLists.txt  README.md
include/: MainWindow.hpp  QSFML.hpp
src/: Main.cpp  MainWindow.cpp  QSFML.cpp  main.cpp
